edits, catalog mobile

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -75,6 +75,7 @@
         <h2 class="visually-hidden">Каталог товаров</h2>
         <div class="catalog__container wrapper">
           <ul class="catalog__list list">
+            <!-- 1 -->
             <li class="catalog__item catalog-item">
               <a class="catalog-item__link link" href="#">
                 <picture>
@@ -108,8 +109,76 @@
                   <button class="catalog-item__button" type="button"></button>
                 </div>
               </div>
-
-
+            </li>
+            <!-- 2 -->
+            <li class="catalog__item catalog-item">
+              <a class="catalog-item__link link" href="#">
+                <picture>
+                  <source media="(min-width: 1150px)"
+                  srcset="img/catalog/desktop/photo_1_desktop.webp 1x, img/catalog/desktop/photo_1_desktop@2x.webp 2x"
+                  type="image/webp" width="316" height="462">
+                <source media="(min-width:1150px)"
+                  srcset="img/catalog/desktop/photo_1_desktop.jpg, img/catalog/desktop/photo_1_desktop@2x.jpg 2x" type="image/jpg"
+                  width="316" height="462">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/photo_1_tablet.webp 1x, img/catalog/tablet/photo_1_tablet@2x.webp 2x" type="image/webp"
+                  width="334" height="334">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/photo_1_tablet.jpg 1x, img/catalog/tablet/photo_1_tablet@2x.jpg 2x" type="image/jpg"
+                  width="334" height="334">
+                <source media="(min-width:320px)"
+                  srcset="img/catalog/mobile/photo_1_mobile.webp 1x, img/catalog/mobile/photo_1_mobile@2x.webp 2x" type="image/webp"
+                  width="260" height="195">
+                <img class="catalog-item__image" loading="lazy"
+                  src="img/catalog/mobile/photo_1_mobile.jpg" srcset="img/catalog/mobile/photo_1_mobile@2x.jpg 2x" width="260"
+                  height="195" alt="Зайчик-попрыгайчик.">
+                </picture>
+              </a>
+              <div class="catalog-item__container catalog-description">
+                <h3 class="catalog-item__title catalog-title title">
+                  <a class="catalog-title__link link" href="#">Зайчик-попрыгайчик</a>
+                </h3>
+                <p class="catalog-item__description description">Рост 30 см, вес 200 г</p>
+                <div class="catalog-description__container">
+                  <span class="catalog-item__price">1 200 руб.</span>
+                  <button class="catalog-item__button" type="button"></button>
+                </div>
+              </div>
+            </li>
+            <!-- 3 -->
+            <li class="catalog__item catalog-item">
+              <a class="catalog-item__link link" href="#">
+                <picture>
+                  <source media="(min-width: 1150px)"
+                  srcset="img/catalog/desktop/photo_1_desktop.webp 1x, img/catalog/desktop/photo_1_desktop@2x.webp 2x"
+                  type="image/webp" width="316" height="462">
+                <source media="(min-width:1150px)"
+                  srcset="img/catalog/desktop/photo_1_desktop.jpg, img/catalog/desktop/photo_1_desktop@2x.jpg 2x" type="image/jpg"
+                  width="316" height="462">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/photo_1_tablet.webp 1x, img/catalog/tablet/photo_1_tablet@2x.webp 2x" type="image/webp"
+                  width="334" height="334">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/photo_1_tablet.jpg 1x, img/catalog/tablet/photo_1_tablet@2x.jpg 2x" type="image/jpg"
+                  width="334" height="334">
+                <source media="(min-width:320px)"
+                  srcset="img/catalog/mobile/photo_1_mobile.webp 1x, img/catalog/mobile/photo_1_mobile@2x.webp 2x" type="image/webp"
+                  width="260" height="195">
+                <img class="catalog-item__image" loading="lazy"
+                  src="img/catalog/mobile/photo_1_mobile.jpg" srcset="img/catalog/mobile/photo_1_mobile@2x.jpg 2x" width="260"
+                  height="195" alt="Зайчик-попрыгайчик.">
+                </picture>
+              </a>
+              <div class="catalog-item__container catalog-description">
+                <h3 class="catalog-item__title catalog-title title">
+                  <a class="catalog-title__link link" href="#">Зайчик-попрыгайчик</a>
+                </h3>
+                <p class="catalog-item__description description">Рост 30 см, вес 200 г</p>
+                <div class="catalog-description__container">
+                  <span class="catalog-item__price">1 200 руб.</span>
+                  <button class="catalog-item__button" type="button"></button>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
