--- a/source/catalog.html
+++ b/source/catalog.html
@@ -73,30 +73,30 @@
       </section>
       <section class="catalog">
         <h2 class="visually-hidden">Каталог товаров</h2>
-        <div class="catalog__container wrapper">
+        <div class="catalog__wrapper wrapper">
           <ul class="catalog__list list">
             <!-- 1 -->
             <li class="catalog__item catalog-item">
               <a class="catalog-item__link link" href="#">
                 <picture>
                   <source media="(min-width: 1150px)"
-                  srcset="img/catalog/desktop/photo_1_desktop.webp 1x, img/catalog/desktop/photo_1_desktop@2x.webp 2x"
-                  type="image/webp" width="316" height="462">
-                <source media="(min-width:1150px)"
-                  srcset="img/catalog/desktop/photo_1_desktop.jpg, img/catalog/desktop/photo_1_desktop@2x.jpg 2x" type="image/jpg"
-                  width="316" height="462">
-                <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/photo_1_tablet.webp 1x, img/catalog/tablet/photo_1_tablet@2x.webp 2x" type="image/webp"
-                  width="334" height="334">
-                <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/photo_1_tablet.jpg 1x, img/catalog/tablet/photo_1_tablet@2x.jpg 2x" type="image/jpg"
-                  width="334" height="334">
-                <source media="(min-width:320px)"
-                  srcset="img/catalog/mobile/photo_1_mobile.webp 1x, img/catalog/mobile/photo_1_mobile@2x.webp 2x" type="image/webp"
-                  width="260" height="195">
-                <img class="catalog-item__image" loading="lazy"
-                  src="img/catalog/mobile/photo_1_mobile.jpg" srcset="img/catalog/mobile/photo_1_mobile@2x.jpg 2x" width="260"
-                  height="195" alt="Зайчик-попрыгайчик.">
+                    srcset="img/catalog/desktop/photo_1_desktop.webp 1x, img/catalog/desktop/photo_1_desktop@2x.webp 2x"
+                    type="image/webp" width="316" height="462">
+                  <source media="(min-width:1150px)"
+                    srcset="img/catalog/desktop/photo_1_desktop.jpg, img/catalog/desktop/photo_1_desktop@2x.jpg 2x"
+                    type="image/jpg" width="316" height="462">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/tablet/photo_1_tablet.webp 1x, img/catalog/tablet/photo_1_tablet@2x.webp 2x"
+                    type="image/webp" width="334" height="334">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/tablet/photo_1_tablet.jpg 1x, img/catalog/tablet/photo_1_tablet@2x.jpg 2x"
+                    type="image/jpg" width="334" height="334">
+                  <source media="(min-width:320px)"
+                    srcset="img/catalog/mobile/photo_1_mobile.webp 1x, img/catalog/mobile/photo_1_mobile@2x.webp 2x"
+                    type="image/webp" width="260" height="195">
+                  <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_1_mobile.jpg"
+                    srcset="img/catalog/mobile/photo_1_mobile@2x.jpg 2x" width="260" height="195"
+                    alt="Зайчик-попрыгайчик.">
                 </picture>
               </a>
               <div class="catalog-item__container catalog-description">
@@ -115,32 +115,32 @@
               <a class="catalog-item__link link" href="#">
                 <picture>
                   <source media="(min-width: 1150px)"
-                  srcset="img/catalog/desktop/photo_1_desktop.webp 1x, img/catalog/desktop/photo_1_desktop@2x.webp 2x"
-                  type="image/webp" width="316" height="462">
-                <source media="(min-width:1150px)"
-                  srcset="img/catalog/desktop/photo_1_desktop.jpg, img/catalog/desktop/photo_1_desktop@2x.jpg 2x" type="image/jpg"
-                  width="316" height="462">
-                <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/photo_1_tablet.webp 1x, img/catalog/tablet/photo_1_tablet@2x.webp 2x" type="image/webp"
-                  width="334" height="334">
-                <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/photo_1_tablet.jpg 1x, img/catalog/tablet/photo_1_tablet@2x.jpg 2x" type="image/jpg"
-                  width="334" height="334">
-                <source media="(min-width:320px)"
-                  srcset="img/catalog/mobile/photo_1_mobile.webp 1x, img/catalog/mobile/photo_1_mobile@2x.webp 2x" type="image/webp"
-                  width="260" height="195">
-                <img class="catalog-item__image" loading="lazy"
-                  src="img/catalog/mobile/photo_1_mobile.jpg" srcset="img/catalog/mobile/photo_1_mobile@2x.jpg 2x" width="260"
-                  height="195" alt="Зайчик-попрыгайчик.">
+                    srcset="img/catalog/desktop/photo_2_desktop.webp 1x, img/catalog/desktop/photo_2_desktop@2x.webp 2x"
+                    type="image/webp" width="316" height="462">
+                  <source media="(min-width:1150px)"
+                    srcset="img/catalog/desktop/photo_2_desktop.jpg, img/catalog/desktop/photo_2_desktop@2x.jpg 2x"
+                    type="image/jpg" width="316" height="462">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/tablet/photo_2_tablet.webp 1x, img/catalog/tablet/photo_2_tablet@2x.webp 2x"
+                    type="image/webp" width="334" height="334">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/tablet/photo_2_tablet.jpg 1x, img/catalog/tablet/photo_2_tablet@2x.jpg 2x"
+                    type="image/jpg" width="334" height="334">
+                  <source media="(min-width:320px)"
+                    srcset="img/catalog/mobile/photo_2_mobile.webp 1x, img/catalog/mobile/photo_2_mobile@2x.webp 2x"
+                    type="image/webp" width="260" height="195">
+                  <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_2_mobile.jpg"
+                    srcset="img/catalog/mobile/photo_2_mobile@2x.jpg 2x" width="260" height="195"
+                    alt="Корзинка для белья.">
                 </picture>
               </a>
               <div class="catalog-item__container catalog-description">
                 <h3 class="catalog-item__title catalog-title title">
-                  <a class="catalog-title__link link" href="#">Зайчик-попрыгайчик</a>
+                  <a class="catalog-title__link link" href="#">Корзинка для белья</a>
                 </h3>
-                <p class="catalog-item__description description">Рост 30 см, вес 200 г</p>
+                <p class="catalog-item__description description">Диаметр 15 см, высота 10 см</p>
                 <div class="catalog-description__container">
-                  <span class="catalog-item__price">1 200 руб.</span>
+                  <span class="catalog-item__price">690 руб.</span>
                   <button class="catalog-item__button" type="button"></button>
                 </div>
               </div>
@@ -150,37 +150,75 @@
               <a class="catalog-item__link link" href="#">
                 <picture>
                   <source media="(min-width: 1150px)"
-                  srcset="img/catalog/desktop/photo_1_desktop.webp 1x, img/catalog/desktop/photo_1_desktop@2x.webp 2x"
-                  type="image/webp" width="316" height="462">
-                <source media="(min-width:1150px)"
-                  srcset="img/catalog/desktop/photo_1_desktop.jpg, img/catalog/desktop/photo_1_desktop@2x.jpg 2x" type="image/jpg"
-                  width="316" height="462">
-                <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/photo_1_tablet.webp 1x, img/catalog/tablet/photo_1_tablet@2x.webp 2x" type="image/webp"
-                  width="334" height="334">
-                <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/photo_1_tablet.jpg 1x, img/catalog/tablet/photo_1_tablet@2x.jpg 2x" type="image/jpg"
-                  width="334" height="334">
-                <source media="(min-width:320px)"
-                  srcset="img/catalog/mobile/photo_1_mobile.webp 1x, img/catalog/mobile/photo_1_mobile@2x.webp 2x" type="image/webp"
-                  width="260" height="195">
-                <img class="catalog-item__image" loading="lazy"
-                  src="img/catalog/mobile/photo_1_mobile.jpg" srcset="img/catalog/mobile/photo_1_mobile@2x.jpg 2x" width="260"
-                  height="195" alt="Зайчик-попрыгайчик.">
+                    srcset="img/catalog/desktop/photo_3_desktop.webp 1x, img/catalog/desktop/photo_3_desktop@2x.webp 2x"
+                    type="image/webp" width="316" height="462">
+                  <source media="(min-width:1150px)"
+                    srcset="img/catalog/desktop/photo_3_desktop.jpg, img/catalog/desktop/photo_3_desktop@2x.jpg 2x"
+                    type="image/jpg" width="316" height="462">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/tablet/photo_3_tablet.webp 1x, img/catalog/tablet/photo_3_tablet@2x.webp 2x"
+                    type="image/webp" width="334" height="334">
+                  <source media="(min-width: 768px)"
+                    srcset="img/catalog/tablet/photo_3_tablet.jpg 1x, img/catalog/tablet/photo_3_tablet@2x.jpg 2x"
+                    type="image/jpg" width="334" height="334">
+                  <source media="(min-width:320px)"
+                    srcset="img/catalog/mobile/photo_3_mobile.webp 1x, img/catalog/mobile/photo_3_mobile@2x.webp 2x"
+                    type="image/webp" width="260" height="195">
+                  <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_3_mobile.jpg"
+                    srcset="img/catalog/mobile/photo_3_mobile@2x.jpg 2x" width="260" height="195"
+                    alt="Большая корзинка для игрушек.">
                 </picture>
               </a>
               <div class="catalog-item__container catalog-description">
                 <h3 class="catalog-item__title catalog-title title">
-                  <a class="catalog-title__link link" href="#">Зайчик-попрыгайчик</a>
+                  <a class="catalog-title__link link" href="#">Большая корзинка для игрушек</a>
                 </h3>
-                <p class="catalog-item__description description">Рост 30 см, вес 200 г</p>
+                <p class="catalog-item__description description">Диаметр 30 см, высота 30 см</p>
                 <div class="catalog-description__container">
-                  <span class="catalog-item__price">1 200 руб.</span>
+                  <span class="catalog-item__price">1 500 руб.</span>
                   <button class="catalog-item__button" type="button"></button>
                 </div>
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+      <!-- video -->
+      <section class="production">
+        <div class="production__wrapper wrapper">
+          <div class="production__container">
+            <div class="production__video video">
+              <picture class="video__picture">
+                <source media="(min-width: 1150px)"
+                  sdcset="img/catalog/desktop/video_desktop.webp 1x, img/catalog/desktop/video_desktop@2x.webp 2x"
+                  type="image/webp" width="683" height="455">
+                <source media="(min-width:1150px)"
+                  srcset="img/catalog/desktop/video_desktop.jpg, img/catalog/desktop/video_desktop@2x.jpg 2x"
+                  type="image/jpg" width="683" height="455">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/video_tablet.webp 1x, img/catalog/tablet/video_tablet@2x.webp 2x"
+                  type="image/webp" width="668" height="455">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/video_tablet.jpg 1x, img/catalog/tablet/video_tablet@2x.jpg 2x"
+                  type="image/jpg" width="668" height="455">
+                <source media="(min-width:320px)"
+                  srcset="img/catalog/mobile/video_mobile.webp 1x, img/catalog/mobile/video_mobile@2x.webp 2x"
+                  type="image/webp" width="260" height="150">
+                <img class="video__image" loading="lazy" src="img/catalog/mobile/video_mobile.jpg"
+                  srcset="img/catalog/mobile/video_mobile@2x.jpg 2x" width="260" height="150"
+                  alt="Большая корзинка для игрушек.">
+              </picture>
+              <button class="video__button" type="button">
+                <span class="visually-hidden">Начать воспроизведение.</span>
+              </button>
+            </div>
+            <h2 class="production__title title">Процесс производства</h2>
+            <p class="production__description description">По просьбам наших любимых фолловеров мы сняли для вас
+              подробное
+              видео о том, как появляются наши товары.</p>
+            <button class="production__button transparent-button"><span class="transparent-button__description">сделать
+                заказ</span></button>
+          </div>
         </div>
       </section>
     </main>
