--- a/source/catalog.html
+++ b/source/catalog.html
@@ -77,106 +77,113 @@
           <ul class="catalog__list list">
             <!-- 1 -->
             <li class="catalog__item catalog-item">
-              <a class="catalog-item__link link" href="#">
-                <picture>
-                  <source media="(min-width: 1150px)"
-                    srcset="img/catalog/desktop/photo_1_desktop.webp 1x, img/catalog/desktop/photo_1_desktop@2x.webp 2x"
-                    type="image/webp" width="316" height="462">
-                  <source media="(min-width:1150px)"
-                    srcset="img/catalog/desktop/photo_1_desktop.jpg, img/catalog/desktop/photo_1_desktop@2x.jpg 2x"
-                    type="image/jpg" width="316" height="462">
-                  <source media="(min-width: 768px)"
-                    srcset="img/catalog/tablet/photo_1_tablet.webp 1x, img/catalog/tablet/photo_1_tablet@2x.webp 2x"
-                    type="image/webp" width="334" height="334">
-                  <source media="(min-width: 768px)"
-                    srcset="img/catalog/tablet/photo_1_tablet.jpg 1x, img/catalog/tablet/photo_1_tablet@2x.jpg 2x"
-                    type="image/jpg" width="334" height="334">
-                  <source media="(min-width:320px)"
-                    srcset="img/catalog/mobile/photo_1_mobile.webp 1x, img/catalog/mobile/photo_1_mobile@2x.webp 2x"
-                    type="image/webp" width="260" height="195">
-                  <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_1_mobile.jpg"
-                    srcset="img/catalog/mobile/photo_1_mobile@2x.jpg 2x" width="260" height="195"
-                    alt="Зайчик-попрыгайчик.">
-                </picture>
-              </a>
-              <div class="catalog-item__container catalog-description">
-                <h3 class="catalog-item__title catalog-title title">
-                  <a class="catalog-title__link link" href="#">Зайчик-попрыгайчик</a>
-                </h3>
-                <p class="catalog-item__description description">Рост 30 см, вес 200 г</p>
-                <div class="catalog-description__container">
-                  <span class="catalog-item__price">1 200 руб.</span>
-                  <button class="catalog-item__button" type="button"></button>
+              <div class="catalog-item__wrapper">
+                <a class="catalog-item__link link" href="#" tabindex="-1">
+                  <picture>
+                    <source media="(min-width: 1150px)"
+                      srcset="img/catalog/desktop/photo_1_desktop.webp 1x, img/catalog/desktop/photo_1_desktop@2x.webp 2x"
+                      type="image/webp" width="316" height="462">
+                    <source media="(min-width:1150px)"
+                      srcset="img/catalog/desktop/photo_1_desktop.jpg, img/catalog/desktop/photo_1_desktop@2x.jpg 2x"
+                      type="image/jpg" width="316" height="462">
+                    <source media="(min-width: 768px)"
+                      srcset="img/catalog/tablet/photo_1_tablet.webp 1x, img/catalog/tablet/photo_1_tablet@2x.webp 2x"
+                      type="image/webp" width="334" height="334">
+                    <source media="(min-width: 768px)"
+                      srcset="img/catalog/tablet/photo_1_tablet.jpg 1x, img/catalog/tablet/photo_1_tablet@2x.jpg 2x"
+                      type="image/jpg" width="334" height="334">
+                    <source media="(min-width:320px)"
+                      srcset="img/catalog/mobile/photo_1_mobile.webp 1x, img/catalog/mobile/photo_1_mobile@2x.webp 2x"
+                      type="image/webp" width="260" height="195">
+                    <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_1_mobile.jpg"
+                      srcset="img/catalog/mobile/photo_1_mobile@2x.jpg 2x" width="260" height="195"
+                      alt="Зайчик-попрыгайчик.">
+                  </picture>
+                </a>
+                <div class="catalog-item__container catalog-description">
+                  <h3 class="catalog-item__title catalog-title title">
+                    <a class="catalog-title__link link" href="#">Зайчик-попрыгайчик</a>
+                  </h3>
+                  <p class="catalog-item__description description">Рост 30 см, вес 200 г</p>
+                  <div class="catalog-description__container">
+                    <span class="catalog-item__price">1 200 руб.</span>
+                    <button class="catalog-item__button" type="button"><span class="cart-button__icon"></span></button>
+                  </div>
                 </div>
               </div>
             </li>
             <!-- 2 -->
             <li class="catalog__item catalog-item">
-              <a class="catalog-item__link link" href="#">
-                <picture>
-                  <source media="(min-width: 1150px)"
-                    srcset="img/catalog/desktop/photo_2_desktop.webp 1x, img/catalog/desktop/photo_2_desktop@2x.webp 2x"
-                    type="image/webp" width="316" height="462">
-                  <source media="(min-width:1150px)"
-                    srcset="img/catalog/desktop/photo_2_desktop.jpg, img/catalog/desktop/photo_2_desktop@2x.jpg 2x"
-                    type="image/jpg" width="316" height="462">
-                  <source media="(min-width: 768px)"
-                    srcset="img/catalog/tablet/photo_2_tablet.webp 1x, img/catalog/tablet/photo_2_tablet@2x.webp 2x"
-                    type="image/webp" width="334" height="334">
-                  <source media="(min-width: 768px)"
-                    srcset="img/catalog/tablet/photo_2_tablet.jpg 1x, img/catalog/tablet/photo_2_tablet@2x.jpg 2x"
-                    type="image/jpg" width="334" height="334">
-                  <source media="(min-width:320px)"
-                    srcset="img/catalog/mobile/photo_2_mobile.webp 1x, img/catalog/mobile/photo_2_mobile@2x.webp 2x"
-                    type="image/webp" width="260" height="195">
-                  <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_2_mobile.jpg"
-                    srcset="img/catalog/mobile/photo_2_mobile@2x.jpg 2x" width="260" height="195"
-                    alt="Корзинка для белья.">
-                </picture>
-              </a>
-              <div class="catalog-item__container catalog-description">
-                <h3 class="catalog-item__title catalog-title title">
-                  <a class="catalog-title__link link" href="#">Корзинка для белья</a>
-                </h3>
-                <p class="catalog-item__description description">Диаметр 15 см, высота 10 см</p>
-                <div class="catalog-description__container">
-                  <span class="catalog-item__price">690 руб.</span>
-                  <button class="catalog-item__button" type="button"></button>
+              <div class="catalog-item__wrapper">
+                <a class="catalog-item__link link" href="#" tabindex="-1">
+                  <picture>
+                    <source media="(min-width: 1150px)"
+                      srcset="img/catalog/desktop/photo_2_desktop.webp 1x, img/catalog/desktop/photo_2_desktop@2x.webp 2x"
+                      type="image/webp" width="316" height="462">
+                    <source media="(min-width:1150px)"
+                      srcset="img/catalog/desktop/photo_2_desktop.jpg, img/catalog/desktop/photo_2_desktop@2x.jpg 2x"
+                      type="image/jpg" width="316" height="462">
+                    <source media="(min-width: 768px)"
+                      srcset="img/catalog/tablet/photo_2_tablet.webp 1x, img/catalog/tablet/photo_2_tablet@2x.webp 2x"
+                      type="image/webp" width="334" height="334">
+                    <source media="(min-width: 768px)"
+                      srcset="img/catalog/tablet/photo_2_tablet.jpg 1x, img/catalog/tablet/photo_2_tablet@2x.jpg 2x"
+                      type="image/jpg" width="334" height="334">
+                    <source media="(min-width:320px)"
+                      srcset="img/catalog/mobile/photo_2_mobile.webp 1x, img/catalog/mobile/photo_2_mobile@2x.webp 2x"
+                      type="image/webp" width="260" height="195">
+                    <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_2_mobile.jpg"
+                      srcset="img/catalog/mobile/photo_2_mobile@2x.jpg 2x" width="260" height="195"
+                      alt="Корзинка для белья.">
+                  </picture>
+                </a>
+                <div class="catalog-item__container catalog-description">
+                  <h3 class="catalog-item__title catalog-title title">
+                    <a class="catalog-title__link link" href="#">Корзинка для белья</a>
+                  </h3>
+                  <p class="catalog-item__description description">Диаметр 15 см, высота 10 см</p>
+                  <div class="catalog-description__container">
+                    <span class="catalog-item__price">690 руб.</span>
+                    <button class="catalog-item__button" type="button"><span class="cart-button__icon"></span></button>
+                  </div>
                 </div>
               </div>
             </li>
             <!-- 3 -->
             <li class="catalog__item catalog-item">
-              <a class="catalog-item__link link" href="#">
-                <picture>
-                  <source media="(min-width: 1150px)"
-                    srcset="img/catalog/desktop/photo_3_desktop.webp 1x, img/catalog/desktop/photo_3_desktop@2x.webp 2x"
-                    type="image/webp" width="316" height="462">
-                  <source media="(min-width:1150px)"
-                    srcset="img/catalog/desktop/photo_3_desktop.jpg, img/catalog/desktop/photo_3_desktop@2x.jpg 2x"
-                    type="image/jpg" width="316" height="462">
-                  <source media="(min-width: 768px)"
-                    srcset="img/catalog/tablet/photo_3_tablet.webp 1x, img/catalog/tablet/photo_3_tablet@2x.webp 2x"
-                    type="image/webp" width="334" height="334">
-                  <source media="(min-width: 768px)"
-                    srcset="img/catalog/tablet/photo_3_tablet.jpg 1x, img/catalog/tablet/photo_3_tablet@2x.jpg 2x"
-                    type="image/jpg" width="334" height="334">
-                  <source media="(min-width:320px)"
-                    srcset="img/catalog/mobile/photo_3_mobile.webp 1x, img/catalog/mobile/photo_3_mobile@2x.webp 2x"
-                    type="image/webp" width="260" height="195">
-                  <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_3_mobile.jpg"
-                    srcset="img/catalog/mobile/photo_3_mobile@2x.jpg 2x" width="260" height="195"
-                    alt="Большая корзинка для игрушек.">
-                </picture>
-              </a>
-              <div class="catalog-item__container catalog-description">
-                <h3 class="catalog-item__title catalog-title title">
-                  <a class="catalog-title__link link" href="#">Большая корзинка для игрушек</a>
-                </h3>
-                <p class="catalog-item__description description">Диаметр 30 см, высота 30 см</p>
-                <div class="catalog-description__container">
-                  <span class="catalog-item__price">1 500 руб.</span>
-                  <button class="catalog-item__button" type="button"></button>
+              <div class="catalog-item__wrapper">
+                <a class="catalog-item__link link" href="#" tabindex="-1">
+                  <picture>
+                    <source media="(min-width: 1150px)"
+                      srcset="img/catalog/desktop/photo_3_desktop.webp 1x, img/catalog/desktop/photo_3_desktop@2x.webp 2x"
+                      type="image/webp" width="316" height="462">
+                    <source media="(min-width:1150px)"
+                      srcset="img/catalog/desktop/photo_3_desktop.jpg, img/catalog/desktop/photo_3_desktop@2x.jpg 2x"
+                      type="image/jpg" width="316" height="462">
+                    <source media="(min-width: 768px)"
+                      srcset="img/catalog/tablet/photo_3_tablet.webp 1x, img/catalog/tablet/photo_3_tablet@2x.webp 2x"
+                      type="image/webp" width="334" height="334">
+                    <source media="(min-width: 768px)"
+                      srcset="img/catalog/tablet/photo_3_tablet.jpg 1x, img/catalog/tablet/photo_3_tablet@2x.jpg 2x"
+                      type="image/jpg" width="334" height="334">
+                    <source media="(min-width:320px)"
+                      srcset="img/catalog/mobile/photo_3_mobile.webp 1x, img/catalog/mobile/photo_3_mobile@2x.webp 2x"
+                      type="image/webp" width="260" height="195">
+                    <img class="catalog-item__image" loading="lazy" src="img/catalog/mobile/photo_3_mobile.jpg"
+                      srcset="img/catalog/mobile/photo_3_mobile@2x.jpg 2x" width="260" height="195"
+                      alt="Большая корзинка для игрушек.">
+                  </picture>
+                </a>
+                <div class="catalog-item__container catalog-description">
+                  <h3 class="catalog-item__title catalog-title title">
+                    <a class="catalog-title__link link" href="#">Большая корзинка для игрушек</a>
+                  </h3>
+                  <p class="catalog-item__description description">Диаметр 30 см, высота 30 см</p>
+                  <div class="catalog-description__container">
+                    <span class="catalog-item__price">1 500 руб.</span>
+                    <button class="catalog-item__button cart-button" type="button"><span
+                        class="cart-button__icon"></span></button>
+                  </div>
                 </div>
               </div>
             </li>
