catalog adaptive desktop

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -67,7 +67,7 @@
     <main class="main-container">
       <h1 class="visually-hidden">Мишка - Каталог продукции.</h1>
       <section class="hero hero--catalog">
-        <div class="hero__container hero__container--form">
+        <div class="hero__container hero__container--notindex hero__container--catalog">
           <h2 class="hero__title hero__title--form hero-title title">Каталог товаров</h2>
         </div>
       </section>
