--- a/source/form.html
+++ b/source/form.html
@@ -67,7 +67,7 @@
     <main class="main-container">
       <h1 class="visually-hidden">Мишка - Вязание на заказ.</h1>
       <section class="hero">
-        <div class="hero__container hero__container--form">
+        <div class="hero__container hero__container--notindex">
           <h2 class="hero__title hero__title--form hero-title title">Вязание на заказ</h2>
         </div>
         <p class="hero__description description wrapper">Мы будем рады воплотить в жизнь ваши пожелания! Заполните
