--- a/source/catalog.html
+++ b/source/catalog.html
@@ -320,11 +320,32 @@
       <div class="modal-container__modal modal">
         <p class="modal__title title">Добавить в корзину</p>
         <p class="modal__description description">Выберите размер:</p>
-        <div class="modal__buttons size">
-          <button type="button" class="size__button size__button--checked" aria-label="размер S">s</button>
-          <button type="button" class="size__button" aria-label="размер M">m</button>
-          <button type="button" class="size__button" aria-label="размер L">l</button>
-        </div>
+        <form class="modal__buttons size">
+          <fieldset class="size__radio fieldset">
+            <legend class="visually-hidden">Выбрать размер</legend>
+            <ul class="size__list list">
+              <li class="size__item">
+                <label class="size__label" for="small">
+                  <input class="size__input input visually-hidden" type="radio" id="small" value="small" name="size"
+                    checked>
+                  <span class="size__description"><span class="size__text">s</span></span>
+                </label>
+              </li>
+              <li class="size__item">
+                <label class="size__label" for="medium">
+                  <input class="size__input input visually-hidden" type="radio" id="medium" value="medium" name="size">
+                  <span class="size__description"><span class="size__text">m</span></span>
+                </label>
+              </li>
+              <li class="size__item">
+                <label class="size__label" for="large">
+                  <input class="size__input input visually-hidden" type="radio" id="large" value="large" name="size">
+                  <span class="size__description"><span class="size__text">l</span></span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+        </form>
         <button type="button" class="modal__button green-button">Добавить</button>
       </div>
     </div>
